Fixing some spacing issues for the time being

--- a/app/stylesheets/trumps/_shame.scss
+++ b/app/stylesheets/trumps/_shame.scss
@@ -66,6 +66,7 @@ a.btn-primary {
   background: $white;
   padding: 1em;
   border-radius: 0.15em;
+  margin-top: 18px;
 }
 
 
